# predictapool-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test-aws.yml
alembic/: env.py
alembic/versions/: 3841e56d9dd2_create_user_table.py  74f71f701fc3_added_a_few_columns_to_users.py  92db71b1718a_change_user_id_to_str.py  ca61e2d76f00_id_is_a_uuid_not_an_int.py  d3305ae38d31_initial_migration.py  ff74aa0ec187_added_is_verified.py
app/: db.py  main.py
app/core/: config.py  deps.py  jwt.py
app/db/: session.py
app/db/crud/: users.py
app/db/models/: __init__.py  user.py
app/graphql/: schema.py
app/routes/: auth.py  users.py
app/schemas/: user.py
app/security/: passwords.py
tests/: conftest.py  test_auth_login.py  test_auth_me.py  test_auth_signup.py  unique_email.py
